--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: express-ingress
+  name: todo-app-ingress
   namespace: todo-app
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
@@ -14,7 +14,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: frontend-service
+                name: app-service
                 port:
                   number: 80
         
